tests/error/result_errors/state_result_tag_not_const.err
Error: Expected a string literal (at $FILE:8:17)
  | 
6 | def main(y: bool) -> None:
7 |     q1 = qubit()
8 |     state_result("foo" if y else "bar", q1)
  |                  ^^^^^^^^^^^^^^^^^^^^^ Expected a string literal

Guppy compilation failed due to 1 previous error
